tests/NormalTests/paczka1/fuzzy1/66466836.err
Error in line 11: 1l0Hw3 A253 29,2
Error in line 24: 1l0Hw3 A599 95,1
Error in line 29: V49teCLFbe A599 52,2
